[gd_scene load_steps=10 format=3 uid="uid://by1dvnv0hyoi1"]

[ext_resource type="Script" path="res://weapons/init_weapon.gd" id="1_o76qi"]
[ext_resource type="Resource" uid="uid://bea4ddi12r04h" path="res://weapons/Resources/Pistol.tres" id="2_23vor"]
[ext_resource type="ArrayMesh" uid="uid://dm62dp4uvnbdj" path="res://weapons/Models/pistol.obj" id="3_ijgt3"]
[ext_resource type="Script" path="res://addons/LineRenderer/line_renderer.gd" id="4_jfopr"]

[sub_resource type="Animation" id="Animation_j58sf"]
resource_name = "assault_rifle_deactivate"
length = 0.14
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponMesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.139454, 1, 0, -1.5, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponMesh")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.139454, 1, -0.043, 0.298, -0.136, 0.944)

[sub_resource type="Animation" id="Animation_cxpud"]
resource_name = "assault_rifle_ready"
length = 0.4
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponMesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, -1.5, 0, 0.19639, 1, 0, 0.2, 0, 0.35011, 1, 0, 0, 0, 0.354469, 1, 0, 0.05, 0, 0.395201, 1, 0, 0, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponMesh")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, -0.15, 0.989, 0.0375163, 1, 0, 0, -0.15, 0.989, 0.189608, 1, 1, 0, 0, 0, 0.363672, 1, -0.207627, 0, 0, 0.978208, 0.390842, 1, 0, 0, 0, -1)

[sub_resource type="Animation" id="Animation_pcad1"]
resource_name = "assault_rifle_shoot"
length = 0.04
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponMesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.0157197, 1, 0, 0, 0.127, 0.0397183, 1, 0, 0, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponMesh")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.0188904, 1, 0.044, 0, 0, 0.999, 0.039234, 1, 0, 0, 0, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kmkwo"]
_data = {
"assault_rifle_deactivate": SubResource("Animation_j58sf"),
"assault_rifle_ready": SubResource("Animation_cxpud"),
"assault_rifle_shoot": SubResource("Animation_pcad1")
}

[sub_resource type="ImmediateMesh" id="ImmediateMesh_rje4y"]

[node name="Weapon" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.582, -0.264, -0.682)
script = ExtResource("1_o76qi")
WEAPON_TYPE = ExtResource("2_23vor")

[node name="WeaponMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = ExtResource("3_ijgt3")

[node name="WeaponAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_kmkwo")
}

[node name="WeaponSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true

[node name="WeaponLineRenderer3D" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = SubResource("ImmediateMesh_rje4y")
script = ExtResource("4_jfopr")

[node name="WeaponRayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
